takamaka_examples/src/takamaka/tests/errors/inconsistentthrowsexceptions2/Sub.java
package takamaka.tests.errors.inconsistentthrowsexceptions2;

public class Sub extends Super {
	public void m() {}
}